# flimsay

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  README.qmd  pyproject.toml
.github/workflows/: cicd.yml  python-package.yml
flimsay/: __init__.py  blib.py  cli.py  constants.py  features.py  mass.py  model.py
flimsay/weights/: __init__.py  ccs_model.txt  one_over_k0_model.txt
flimsy/: data.py  features.py
tests/unit_tests/: features.py  test_blib.py  test_features.py  test_model.py
train/: .gitignore  README.md  dvc.yaml
train/data/: .gitignore
train/plots/: .gitignore  ccs_metrics.toml  ccs_model_metrics.toml  one_over_k0_model_metrics.toml
train/scripts/: dataset_utils.py  train_1ok0.py  train_ccs.py
train/weights/: ccs_model.txt  one_over_k0_model.txt
