[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flimsay"
version = "0.4.0"
authors = [
    {name = "Sebastian Paez", email = "spaez@talus.bio"},
]
description = "A super simple fast IMS predictor"
requires-python = ">=3.9,<3.12"
keywords = ["proteomics", "dia", "ion mobility"]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas >= 2.0.0",
    "numpy == 1.26.0",
    "tqdm >= 4.64.1",
    "loguru >= 0.6.0",
    "lightgbm >= 3.3.5",
    "rich-click >= 1.6.1",
]

[project.scripts]
flimsay = "flimsay.cli:cli"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/TalusBio/flimsay"
Documentation = "https://TalusBio.github.io/flimsay"

[project.optional-dependencies]
test = [
    "pytest >= 7.2.0",
    "pytest-datadir >= 1.4.1",
    "pytest-cov >= 4.0.0",
]
plot = [
    "matplotlib",
    "vizta",
]
build = [
    "nbformat",
    "nbclient",
    "ipykernel",
    "wheel",
    "build",
    "twine",
]
dev = [
    "ruff >= 0.0.253",
    "black >= 23.1.0",
    "isort >=  5.12.0",
    "pylance >= 0.3.9",
    "jupyter >= 1.0.0",
    "pip-tools >= 7.0.0"
]

[tool.setuptools.package-dir]
flimsay = "flimsay"

[tool.setuptools.package-data]
flimsay = ["*.txt"]
"flimsay.weights" = ["*.txt"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules -v --cov=flimsay"
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "flimsay",
    "tests/unit_tests",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "B","W", "C", "I", "D", "UP", "N", "ANN", "T20", "COM"]
target-version = "py39"

# ANN101 Missing type annotation for `self` in method
# D213 Multi-line docstring summary should start at the second lin
# D203 1 blank line required before class docstring
# D100 Missing docstring in public module
# ANN102 Missing type annotation for `cls` in classmethod
# D401 First line of docstring should be in imperative mood
ignore = ["D213", "ANN101", "D203", "D100", "ANN102", "D401"]

fix = true

[tool.ruff.per-file-ignores]
"**__init__.py" = ["D104"]
"tests/**.py" = ["ANN201", "ANN001", "ANN202"]

# ANN001 Missing type annotation for function argument
# Ignoring in the cli since it is redundant with the click options
# D103 Missing docstring in public function
# Information in the help of the click command.
"flimsay/cli.py" = ["ANN001", "ANN201", "D103"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
preview = true

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.qmd" = [
    "version = {version}",
]
